--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "Algorithm"]
 	path = Algorithm
-	url = https://github.com/ch-duan/Algorithm.git
+	url = git@github.com/ch-duan/Algorithm.git
